# voxel-engine

./: .gitignore  CMakeLists.txt  README.md  blockpick_aw  build-and-run.sh  intervalmap.hpp  test2.cpp
include/: block.hpp  camera.hpp  chunk.hpp  chunkgenerator.hpp  chunkmanager.hpp  chunkmesh.hpp  chunkmeshdata.hpp  chunkmesher.hpp  controls.hpp  debugwindow.hpp  globals.hpp  intervalmap.hpp  main.hpp  renderer.hpp  shader.hpp  spacefilling.hpp  utils.hpp  worldupdatemessage.h
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt  glad.c  glad.h
lib/glfw-3.3.8/src/: CMakeLists.txt
shaders/: shader-quad.fs  shader-texture.fs  shader-texture.gs  shader-texture.vs  shader.fs  shader.vs
src/: CMakeLists.txt  chunk.cpp  chunkgenerator.cpp  chunkmanager.cpp  chunkmesh.cpp  chunkmesher.cpp  controls.cpp  debugwindow.cpp  main.cpp  renderer.cpp  spacefilling.cpp  utils.cpp
